Mejora interfaz de sesiones y corrección de botones